fixed issue with table jumping up/down

--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,24 +1,42 @@
+$darkGray: #474955;
+$green: #7EBC3C;
+
 .pagination-container {
   display: flex;
   list-style-type: none;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  font-size: 18px;
+  font-weight: 700;
 
   .pagination-item {
     padding: 0 12px;
     height: 32px;
     text-align: center;
     margin: auto 4px;
-    color: rgba(0, 0, 0, 0.87);
+    color: $darkGray;
     display: flex;
     box-sizing: border-box;
     align-items: center;
     letter-spacing: 0.01071em;
     border-radius: 16px;
     line-height: 1.43;
-    font-size: 13px;
     min-width: 32px;
 
     .arrow {
       font-size: 24px;
+      font-weight: 500;
+    }
+
+    &:first-of-type {
+      margin-right: auto;
+      margin-left: 25px;
+    }
+
+    &:last-of-type {
+      margin-left: auto;
+      margin-right: 25px;
     }
     
     &.dots:hover {
@@ -27,12 +45,12 @@
     }
 
     &:hover {
-      background-color: rgba(0, 0, 0, 0.04);
+      color: $green;
       cursor: pointer;
     }
 
     &.selected {
-      background-color: rgba(0, 0, 0, 0.08);
+      color: $green;
     }
 
     &.disabled {
